[gd_scene load_steps=7 format=3 uid="uid://tkb8hrl77s1m"]

[ext_resource type="Script" path="res://Nodes/Scripts/hkbDampingModifierScene.gd" id="1_5jykn"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_nccyg"]
[ext_resource type="Texture2D" uid="uid://dtrsj56jbquo8" path="res://Resources/Icons/PinButton.png" id="3_8rvgy"]
[ext_resource type="Texture2D" uid="uid://csb3wjekhlmy1" path="res://Resources/Icons/UnpinButton.png" id="4_jy6th"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_01mdu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y45yo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.168627, 0.211765, 0.266667, 0.898039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 1
anti_aliasing_size = 2.0

[node name="hkbDampingModifier" type="GraphNode"]
offset_right = 300.0
offset_bottom = 160.0
title = "hkbDampingModifier"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_5jykn")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="variableBindingSet" type="Label" parent="."]
layout_mode = 2
text = "variableBindingSet"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="."]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "DampingModifier"
placeholder_text = "Name"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(504, 566)
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_y45yo")

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 5.0
offset_top = 5.0
offset_right = 499.0
offset_bottom = 561.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_nccyg")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbDampingModifier"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PinButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_8rvgy")
texture_pressed = ExtResource("4_jy6th")

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_01mdu")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="userData" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
layout_mode = 2
text = "   userData"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="userDataButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3

[node name="enable" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
layout_mode = 2
text = "   enable"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="kP" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kP"]
layout_mode = 2
text = "   kP"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kP"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="kPLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kP"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[node name="kI" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kI"]
layout_mode = 2
text = "   kI"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kI"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="kILine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kI"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[node name="kD" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kD"]
layout_mode = 2
text = "   kD"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kD"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="kDLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kD"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "-0.0"
alignment = 2
max_length = 20

[node name="enableScalarDamping" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableScalarDamping"]
layout_mode = 2
text = "   enableScalarDamping"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableScalarDamping"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableScalarDampingButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableScalarDamping"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="enableVectorDamping" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableVectorDamping"]
layout_mode = 2
text = "   enableVectorDamping"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableVectorDamping"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableVectorDampingButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableVectorDamping"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="rawValue" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawValue"]
layout_mode = 2
text = "   rawValue"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawValue"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="rawValueLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawValue"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[node name="dampedValue" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedValue"]
layout_mode = 2
text = "   dampedValue"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedValue"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="dampedValueLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedValue"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[node name="rawVector" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawVector"]
layout_mode = 2
text = "   rawVector"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawVector"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="rawVectorLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawVector"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "(0.0 0.0 0.0 0.0)"
alignment = 2
max_length = 20

[node name="dampedVector" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedVector"]
layout_mode = 2
text = "   dampedVector"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedVector"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="dampedVectorLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedVector"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "(0.0 0.0 0.0 0.0)"
alignment = 2
max_length = 20

[node name="vecErrorSum" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecErrorSum"]
layout_mode = 2
text = "   vecErrorSum"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecErrorSum"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="vecErrorSumLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecErrorSum"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "(0.0 0.0 0.0 0.0)"
alignment = 2
max_length = 20

[node name="vecPreviousError" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecPreviousError"]
layout_mode = 2
text = "   vecPreviousError"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecPreviousError"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="vecPreviousErrorLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecPreviousError"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "(0.0 0.0 0.0 0.0)"
alignment = 2
max_length = 20

[node name="errorSum" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/errorSum"]
layout_mode = 2
text = "   errorSum"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/errorSum"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="errorSumLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/errorSum"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[node name="previousError" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/previousError"]
layout_mode = 2
text = "   previousError"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/previousError"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="previousErrorLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/previousError"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 20

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData/userDataButton" to="." method="_on_user_data_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable/enableButton" to="." method="_on_enable_button_item_selected"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kP/kPLine" to="." method="_on_k_p_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kI/kILine" to="." method="_on_k_i_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/kD/kDLine" to="." method="_on_k_d_line_text_changed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableScalarDamping/enableScalarDampingButton" to="." method="_on_enable_scalar_damping_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enableVectorDamping/enableVectorDampingButton" to="." method="_on_enable_vector_damping_button_item_selected"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawValue/rawValueLine" to="." method="_on_raw_value_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedValue/dampedValueLine" to="." method="_on_damped_value_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/rawVector/rawVectorLine" to="." method="_on_raw_vector_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/dampedVector/dampedVectorLine" to="." method="_on_damped_vector_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecErrorSum/vecErrorSumLine" to="." method="_on_vec_error_sum_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/vecPreviousError/vecPreviousErrorLine" to="." method="_on_vec_previous_error_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/errorSum/errorSumLine" to="." method="_on_error_sum_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/previousError/previousErrorLine" to="." method="_on_previous_error_line_text_changed"]
